// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state for enterprise, can create 1`] = `
.c12 {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 224px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #651FFF;
}

.c17:active {
  background: #354AA4;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  display: inline-block;
  transition: color .3s;
  margin-bottom: 16px;
  color: #FFFFFF;
  font-size: 64px;
}

.c5 {
  box-sizing: border-box;
  max-width: 900px;
  margin-top: 24px;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 100%;
  background-color: #1C254D;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c6 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  margin-right: 24px;
  padding: 24px;
  background-color: #111B48;
}

.c16 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c8 {
  display: block;
  outline: none;
  width: 220px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.87);
  font-weight: 700;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  font-size: 14px;
  margin: 0px;
  margin-bottom: 8px;
  font-weight: 700;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c4 {
  box-sizing: border-box;
  max-width: 900px;
  margin-top: 24px;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 100%;
  background-color: #1C254D;
  display: flex;
}

.c7 {
  box-sizing: border-box;
  max-width: 296px;
  margin-right: 24px;
  padding: 24px;
  max-height: 176px;
  background-color: #111B48;
  border-radius: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c9 {
  box-sizing: border-box;
  margin-top: 16px;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
      <button
        class="c3"
        kind="primary"
        title=""
        width="240px"
      >
        Add Application
      </button>
    </div>
    <div
      class="c4 sc-AxirZ c5"
      width="100%"
    >
      <a
        class="c6 c7"
        href="https://www.youtube.com/watch?v=HkBQY-uWIbU"
        rel="noreferrer"
        target="_blank"
      >
        <img
          class="c8"
          src="file_stub"
          width="220px"
        />
        <div
          class="c9"
          style="position: absolute;"
        >
          <span
            class="c10 icon icon-play-circle "
            color="light"
            font-size="64px"
          />
          <div
            class="c11"
            color="text.primary"
            font-weight="700"
          >
            WATCH THE QUICKSTART
          </div>
        </div>
      </a>
      <div
        class="c12"
      >
        <div
          class="c13"
        >
          <div
            class="c14"
            font-size="14"
            font-weight="700"
          >
            ADD YOUR FIRST APPLICATION
          </div>
          <div
            class="c15"
          >
            Quick access to web applications running behind NAT and firewalls with
      security and compliance. Follow 
            <a
              class="c16"
              href="https://goteleport.com/docs/application-access/getting-started/"
              rel="noreferrer"
              target="_blank"
            >
              the documentation
            </a>
             to get started.
          </div>
        </div>
        <button
          class="c17"
          kind="primary"
          width="224px"
        >
          ADD APPLICATION
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed state 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-all;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c4 a {
  color: #FFFFFF;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="sc-AxirZ sc-fzqBZW c0"
  >
    <div
      class="sc-AxirZ sc-fzqBZW c1"
    >
      <div
        class="sc-fznZeY c2"
      >
        Applications
      </div>
      <button
        class="c3"
        kind="primary"
        title=""
        width="240px"
      >
        Add Application
      </button>
    </div>
    <div
      class="c4"
      kind="danger"
    >
      some error message
       
    </div>
  </div>
</div>
`;

exports[`loaded state 1`] = `
.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c9 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
}

.c11 {
  display: inline-block;
  transition: color .3s;
  margin-bottom: 16px;
  color: #FFFFFF;
  font-size: 62px;
}

.c7 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all .3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
}

.c7 .c8 {
  color: inherit;
}

.c7:disabled {
  color: rgba(255,255,255,0.3);
}

.c7:disabled {
  color: rgba(255,255,255,0.3);
}

.c7:hover,
.c7:focus {
  background: rgba(255,255,255,0.1);
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
  margin-bottom: 8px;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c6 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: center;
}

.c10 {
  box-sizing: border-box;
  padding-left: 8px;
  padding-right: 8px;
  width: 220px;
  color: rgba(255,255,255,0.87);
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 32px;
  height: 240px;
  width: 240px;
  background-color: #222C59;
  border-radius: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  position: relative;
  box-shadow: 0 4px 32px rgba(0,0,0,0.24);
  cursor: pointer;
  transition: 0.3s;
  border: 2px solid transparent;
}

.c5:hover {
  border: 2px solid #512FC9;
  background: #2C3A73;
}

<div>
  <div
    class="sc-AxirZ c0"
  >
    <div
      class="sc-AxirZ c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
      <button
        class="c3"
        kind="primary"
        title=""
        width="240px"
      >
        Add Application
      </button>
    </div>
    <div
      class="sc-AxirZ c4"
    >
      <div
        class="sc-AxirZ c5"
        height="240px"
        width="240px"
      >
        <div
          class="sc-AxirZ c6"
          width="100%"
        >
          <button
            class="c7"
            data-testid="button"
            style="right: 10px; position: absolute; top: 10px;"
          >
            <span
              class="c8 c9 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
        <a
          class="sc-AxirZ c10"
          color="text.primary"
          href="/web/launch/jenkins.one/one/jenkins"
          style="text-decoration: none;"
          tabindex="-1"
          target="_blank"
          width="220px"
        >
          <span
            class="c8 c11 icon icon-new-tab "
            color="light"
            font-size="62px"
          />
          <div
            class="c12"
            style="text-align: center; width: 100%;"
          >
            jenkins
          </div>
        </a>
      </div>
      <div
        class="sc-AxirZ c5"
        height="240px"
        width="240px"
      >
        <div
          class="sc-AxirZ c6"
          width="100%"
        >
          <button
            class="c7"
            data-testid="button"
            style="right: 10px; position: absolute; top: 10px;"
          >
            <span
              class="c8 c9 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
        <a
          class="sc-AxirZ c10"
          color="text.primary"
          href="/web/launch/jenkins.two/two/jenkins"
          style="text-decoration: none;"
          tabindex="-1"
          target="_blank"
          width="220px"
        >
          <span
            class="c8 c11 icon icon-new-tab "
            color="light"
            font-size="62px"
          />
          <div
            class="c12"
            style="text-align: center; width: 100%;"
          >
            jenkins
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`readonly empty state 1`] = `
.c4 {
  box-sizing: border-box;
  max-width: 600px;
  margin-top: 24px;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  color: rgba(255,255,255,0.87);
  background-color: #222C59;
  text-align: center;
  border-radius: 12px;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="sc-fzqBZW c0"
  >
    <div
      class="sc-fzqBZW c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
      <button
        class="c3"
        disabled=""
        kind="primary"
        title="You do not have access to add an application"
        width="240px"
      >
        Add Application
      </button>
    </div>
    <div
      class="c4"
      color="text.primary"
    >
      <div
        class="c5"
      >
        No Applications Found
      </div>
      <div
        class="c6"
      >
        There are no applications for the "
        <span
          class="c7"
        >
          im-a-cluster
        </span>
        " cluster.
      </div>
    </div>
  </div>
</div>
`;
